force-app/main/default/objects/Demande_SAV__c/Demande_SAV__c.object-meta.xml
<CustomObject>
    <label>Demande SAV</label>
    <nameField>
        <label>Demande SAV Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demandes SAV</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>