force-app/main/default/objects/Demande_SAV__c/fields/Artisan_Responsable__c.field-meta.xml
<CustomField>
    <fullName>Artisan_Responsable__c</fullName>
    <label>Artisan Responsable</label>
    <length>100</length>
    <type>Text</type>
</CustomField>