force-app/main/default/objects/Demande_SAV__c/fields/Canal_Retour__c.field-meta.xml
<CustomField>
    <fullName>Canal_Retour__c</fullName>
    <label>Canal Retour</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boutique</fullName>
            </value>
            <value>
                <fullName>Livraison domicile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>