force-app/main/default/objects/Demande_SAV__c/fields/Categorie_SAV__c.field-meta.xml
<CustomField>
    <fullName>Categorie_SAV__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Categorie SAV</label>
    <referenceTo>Categorie_SAV__c</referenceTo>
    <relationshipLabel>Demandes SAV</relationshipLabel>
    <relationshipName>Demandes_SAV</relationshipName>
    <type>Lookup</type>
</CustomField>