force-app/main/default/objects/Demande_SAV__c/fields/Conseiller_Reference__c.field-meta.xml
<CustomField>
    <fullName>Conseiller_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Demandes_SAV</relationshipName>
    <type>Lookup</type>
</CustomField>