force-app/main/default/objects/Demande_SAV__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Demandes SAV</relationshipLabel>
    <relationshipName>Demandes_SAV</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>