force-app/main/default/objects/Demande_SAV__c/fields/Date_Colis_Envoye__c.field-meta.xml
<CustomField>
    <fullName>Date_Colis_Envoye__c</fullName>
    <label>Date Colis Envoye</label>
    <type>DateTime</type>
</CustomField>