force-app/main/default/objects/Demande_SAV__c/fields/Date_Colis_Recu__c.field-meta.xml
<CustomField>
    <fullName>Date_Colis_Recu__c</fullName>
    <label>Date Colis Recu</label>
    <type>DateTime</type>
</CustomField>