force-app/main/default/objects/Demande_SAV__c/fields/Date_Expedition__c.field-meta.xml
<CustomField>
    <fullName>Date_Expedition__c</fullName>
    <label>Date Expedition</label>
    <type>DateTime</type>
</CustomField>