force-app/main/default/objects/Demande_SAV__c/fields/Date_Livraison__c.field-meta.xml
<CustomField>
    <fullName>Date_Livraison__c</fullName>
    <label>Date Livraison</label>
    <type>DateTime</type>
</CustomField>