force-app/main/default/objects/Demande_SAV__c/fields/Date_Reparation_Debut__c.field-meta.xml
<CustomField>
    <fullName>Date_Reparation_Debut__c</fullName>
    <label>Date Reparation Debut</label>
    <type>DateTime</type>
</CustomField>