force-app/main/default/objects/Demande_SAV__c/fields/Date_Reparation_Fin__c.field-meta.xml
<CustomField>
    <fullName>Date_Reparation_Fin__c</fullName>
    <label>Date Reparation Fin</label>
    <type>DateTime</type>
</CustomField>