force-app/main/default/objects/Demande_SAV__c/fields/Date_Soumission__c.field-meta.xml
<CustomField>
    <fullName>Date_Soumission__c</fullName>
    <label>Date Soumission</label>
    <type>DateTime</type>
</CustomField>