force-app/main/default/objects/Demande_SAV__c/fields/Date_Validation_Client__c.field-meta.xml
<CustomField>
    <fullName>Date_Validation_Client__c</fullName>
    <label>Date Validation Client</label>
    <type>DateTime</type>
</CustomField>