force-app/main/default/objects/Demande_SAV__c/fields/Montant_Devis__c.field-meta.xml
<CustomField>
    <fullName>Montant_Devis__c</fullName>
    <label>Montant Devis</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>