force-app/main/default/objects/Demande_SAV__c/fields/Montant_Final__c.field-meta.xml
<CustomField>
    <fullName>Montant_Final__c</fullName>
    <label>Montant Final</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>