force-app/main/default/objects/Demande_SAV__c/fields/Note_Atelier__c.field-meta.xml
<CustomField>
    <fullName>Note_Atelier__c</fullName>
    <label>Note Atelier</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>