force-app/main/default/objects/Demande_SAV__c/fields/Numero_Demande__c.field-meta.xml
<CustomField>
    <fullName>Numero_Demande__c</fullName>
    <displayFormat>SAV-{YYYY}-{0000}</displayFormat>
    <label>Numero Demande</label>
    <type>AutoNumber</type>
</CustomField>