force-app/main/default/objects/Demande_SAV__c/fields/Numero_Suivi_Entrant__c.field-meta.xml
<CustomField>
    <fullName>Numero_Suivi_Entrant__c</fullName>
    <label>Numero Suivi Entrant</label>
    <length>100</length>
    <type>Text</type>
</CustomField>