force-app/main/default/objects/Demande_SAV__c/fields/Payement_Intent_ID__c.field-meta.xml
<CustomField>
    <fullName>Payement_Intent_ID__c</fullName>
    <label>Payement Intent ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>