force-app/main/default/objects/Demande_SAV__c/fields/Photo_URLs__c.field-meta.xml
<CustomField>
    <fullName>Photo_URLs__c</fullName>
    <label>Photo URLs</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>