force-app/main/default/objects/Demande_SAV__c/fields/Priorite__c.field-meta.xml
<CustomField>
    <fullName>Priorite__c</fullName>
    <label>Priorite</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>VIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>