force-app/main/default/objects/Demande_SAV__c/fields/Produit_Client__c.field-meta.xml
<CustomField>
    <fullName>Produit_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produit Client</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Demandes SAV</relationshipLabel>
    <relationshipName>Demandes_SAV</relationshipName>
    <type>Lookup</type>
</CustomField>