force-app/main/default/objects/Demande_SAV__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Soumise</fullName>
            </value>
            <value>
                <fullName>Colis_Envoyé</fullName>
            </value>
            <value>
                <fullName>Colis_Recu</fullName>
            </value>
            <value>
                <fullName>En_Diagnostic</fullName>
            </value>
            <value>
                <fullName>Devis_Envoyé</fullName>
            </value>
            <value>
                <fullName>Devis_Approuvé</fullName>
            </value>
            <value>
                <fullName>En_Réparation</fullName>
            </value>
            <value>
                <fullName>Contrôle_Qualité</fullName>
            </value>
            <value>
                <fullName>Expédié</fullName>
            </value>
            <value>
                <fullName>Livré</fullName>
            </value>
            <value>
                <fullName>Validé</fullName>
            </value>
            <value>
                <fullName>Clôturé</fullName>
            </value>
            <value>
                <fullName>Annulée</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>