force-app/main/default/objects/Demande_SAV__c/fields/Statut_Paiement__c.field-meta.xml
<CustomField>
    <fullName>Statut_Paiement__c</fullName>
    <label>Statut Paiement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non requis</fullName>
            </value>
            <value>
                <fullName>En attente</fullName>
            </value>
            <value>
                <fullName>Payé</fullName>
            </value>
            <value>
                <fullName>Remboursé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>